--- a/aboutus.html
+++ b/aboutus.html
@@ -7,12 +7,47 @@
     <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
-    <div class="header" id="header">
+
+    <header>
+        <a href="index.html"> <img src="images/cendazelogo.jpg" alt="logo" class="logo"> </a>
+
+        <a class="openslide" onclick="open_box()" href="#">
+            <svg viewBox="0 0 100 80" width="40" height="40">
+                <rect width="100" height="20"></rect>
+                <rect y="30" width="100" height="20"></rect>
+                <rect y="60" width="100" height="20"></rect>
+            </svg>
+        </a>
+
+        <nav>
+            <div class="nav">
+                <ul>
+                    <li>  <a href="index.html">homepage </a> </li> 
+                    <li> <a href="#about">about us  </a>  </li>
+                    <li> <a href="#contact">contact us</a></li>
+                </ul>
+            </div>
+ 
+            <div class="side-menu" id="menu">
+                <ul>
+                    <li><a href="homepage.html">homepage </a> </li> 
+                    <li> <a href="#about">about us  </a>  </li>
+                    <li> <a href="#contact">contact us</a></li>
+                    
+                    <button><a href="#" onclick="close_box()">goaway</a></button>
+                </ul>
+            </div>
+                
+        </nav>
+    </header>
+
+    <div class="hero" id="hero">
         <h1>Cendaze</h1>
         <p>Get to know about us</p>
     </div>
 
-        <h2>about us</h2>
+    <div class="about">
+        <h2>About Us</h2>
         <div class="info">
             <p>Cendaze is a leading innovator in the realm of modern eye- wear, renowned for its exquisite fusion of cutting-edge design and superior craftsmanship. With a commitment to redefin- ing style and functionality, Cendaze curates a diverse collec- tion of sunglasses, each meticulously crafted to embody ele- gance and durability. Beyond fashion, Cendaze emphasizes a personalized approach, ensuring every pair not only comple- ments individual tastes but also provides optimal eye protec- tion. Rooted in innovation and driven by a passion for excep- tional eyewear, Cendaze stands as a beacon of contemporary style, delivering unparalleled quality and sophistication to its discerning clientele.</p>
             <img src="images/about-img.jpg" alt="about-img">
@@ -21,7 +56,7 @@
         <h2>Timeless Panache</h2>
         <div class="info">
             <img src="images/timeless.png" alt="about-img">
-            <p>n "Timeless Panache," Cendaze unveils a collection of eyewear that defies the constraints of time. These sun- glasses are more than accessories; they are legacies of style, meticulously craft- ed to encapsulate the essence of eternal allure. With a fusion of vintage sophis- tication and contemporary charm, each frame tells a tale of perpetual elegance, inviting you into a realm where trends fade, but true style remains. Explore a world where every detail speaks of refined craftsmanship, and every wear is a celebration of timeless fashion. Experience the ageless appeal of "Timeless Paache," where your elegance stands eternally unmatched.</p>
+            <p>In "Timeless Panache," Cendaze unveils a collection of eyewear that defies the constraints of time. These sun- glasses are more than accessories; they are legacies of style, meticulously craft- ed to encapsulate the essence of eternal allure. With a fusion of vintage sophis- tication and contemporary charm, each frame tells a tale of perpetual elegance, inviting you into a realm where trends fade, but true style remains. Explore a world where every detail speaks of refined craftsmanship, and every wear is a celebration of timeless fashion. Experience the ageless appeal of "Timeless Paache," where your elegance stands eternally unmatched.</p>
         </div>
 
         <h2>Our Voice</h2>
@@ -32,5 +67,21 @@
                 At Cendaze, we don't just create eyewear; we craft timeless statement pieces. Versatile and adaptable, our sunglasses can be styled in various ways, offering the freedom to elevate your look or embrace a more relaxed vibe. Whether you choose to style up for a glamorous evening or down for a casual day out, Cendaze empowers you to express your unique style effort- lessly. We inspire our audience, urging them to embrace the timeless allure that our eyewear embodies. Our voice is not just a collection of words; it's a melody that serenades the senses, a whisper that ignites desire, and a call to action that beckons you to explore the boundless elegance of "Timeless Panache."</p>
             <img src="images/voice.jpeg" alt="about-img">
         </div>
+    </div>
+
+    <footer>
+        <h3>Copyright © 2023 Cendaze</h3>
+    </footer>
+    <script>
+        //open the menu
+              function open_box() {
+            document.getElementById('menu').style.width=('100vw');
+        } 
+
+        //close the menu
+        function close_box() {
+            document.getElementById('menu').style.width=('0px');
+        }
+    </script>
 </body>
 </html>
