--- a/aboutus.html
+++ b/aboutus.html
@@ -22,22 +22,20 @@
         <nav>
             <div class="nav">
                 <ul>
-                    <li>  <a href="index.html">homepage </a> </li> 
-                    <li> <a href="#about">about us  </a>  </li>
-                    <li> <a href="#contact">contact us</a></li>
+                    <li>  <a href="index.html">Homepage </a> </li> 
+                    <li> <a href="aboutus.html">About Us  </a>  </li>
+                    <li> <a href="shop.html">Shop </a></li>
                 </ul>
             </div>
  
             <div class="side-menu" id="menu">
                 <ul>
-                    <li><a href="homepage.html">homepage </a> </li> 
-                    <li> <a href="#about">about us  </a>  </li>
-                    <li> <a href="#contact">contact us</a></li>
+                    <li><a href="index.html">Homepage </a> </li> 
+                    <li> <a href="aboutus.html">About Us  </a>  </li>
+                    <li> <a href="shop.html">Shop</a></li>
                     
-                    <button><a href="#" onclick="close_box()">goaway</a></button>
                 </ul>
-            </div>
-                
+            </div>     
         </nav>
     </header>
 
